# typeid-postgres

./: Cargo.toml  Dockerfile  Readme.md  install.sh  typeid.control
.cargo/: config.toml
.github/: release-drafter.yml
.github/workflows/: ci.yaml  clippy.yaml  release.yaml  test-migrations.yaml
sql/: typeid--0.1.0--0.2.0.sql  typeid--0.1.0.sql  typeid--0.2.0.sql
src/: aggregate.rs  base32.rs  lib.rs  typeid.rs
tests/: spec.rs
tests/spec/: invalid.yml  valid.yml
