[package]
name = "typeid"
version = "0.0.0"
edition = "2021"

[build]
rustflags = ["-C", "target-feature=+aes"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg16"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
gxhash = { version = "3.4.1" }
pgrx = "=0.11.4"
serde = "1.0.203"
thiserror = "1.0.61"
uuid = { version = "1.0", features = ["v7", "fast-rng", "serde"] }

[dev-dependencies]
pgrx-tests = "=0.11.4"
serde_yaml = "0.9"
libtest-mimic = "0.7"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[test]]
name = "spec"
path = "tests/spec.rs"
harness = false
