[package]
name = "typeid"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_typeid"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
gxhash = { version = "3.5.0" }
pgrx = "=0.15.0"
serde = "1.0.219"
thiserror = "2.0.12"
uuid = { version = "1.17", features = ["v7", "fast-rng", "serde"] }

[dev-dependencies]
pgrx-tests = "=0.15.0"
serde_yaml = "0.9"
libtest-mimic = "0.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[test]]
name = "spec"
path = "tests/spec.rs"
harness = false
